--- a/Screens Challenge/app/build.gradle
+++ b/Screens Challenge/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.liferay.screenschallenge"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -25,7 +25,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.liferay.mobile:liferay-screens:1.0.+'
-    compile 'com.liferay.mobile:liferay-material-viewset:1.0.+'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+
+    compile 'com.liferay.mobile:liferay-screens:1.1+'
+    compile 'com.liferay.mobile:liferay-material-viewset:1.1+'
 }
